Update package for compatability new version of DPBD dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ S3method(rice,voteList)
 S3method(subset,questionList)
 S3method(subset,voteList)
 S3method(summary,voteList)
+S3method(votesame,rollcall)
+S3method(votesame,voteList)
 export(addCabinetInfo)
 export(addInfo)
 export(addPartyInfo)
@@ -21,5 +23,6 @@ export(cosponsors)
 export(downloadVotes)
 export(randomvotes)
 export(rice)
+export(votesame)
 importFrom(magrittr,"%>%")
 importFrom(stats,"setNames")
