--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ export(randomvotes)
 export(rice)
 export(votesame)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(stats,"setNames")
