Add pkgdown documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(addInfo)
 export(addPartyInfo)
 export(as.rollcall)
 export(cosponsors)
+export(downloadQuestions)
 export(downloadVotes)
 export(randomvotes)
 export(rice)
