--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,11 @@ Authors@R:
            family = "Louwerse",
            role = c("aut", "cre"),
            email = "t.p.louwerse@fsw.leidenuniv.nl")
-Description: Functions for working with the Dutch Parliamentary Behaviour Dataset.
+Description: Functions for working with the Dutch Parliamentary Behaviour
+    Dataset.
 License: GPL-3
+URL: https://github.com/louwerse/dutchparl
+BugReports: URL: https://github.com/louwerse/dutchparl/issues
 Depends:
     R (>= 3.6)
 Imports:
