--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: Functions for working with the Dutch Parliamentary Behaviour
     Dataset.
 License: GPL-3
 URL: https://github.com/louwerse/dutchparl
-BugReports: URL: https://github.com/louwerse/dutchparl/issues
+BugReports: https://github.com/louwerse/dutchparl/issues
 Depends:
     R (>= 3.6)
 Imports:
@@ -26,3 +26,6 @@ Imports:
 Encoding: UTF-8
 LazyData: TRUE
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
